re PR c++/53624 (GCC rejects function local types in template function with default template arguments)

/cp
2012-07-31  Paolo Carlini  <paolo.carlini@oracle.com>

	PR c++/53624
	* pt.c (check_default_tmpl_args): Don't check local types.

/testsuite
2012-07-31  Paolo Carlini  <paolo.carlini@oracle.com>

	PR c++/53624
	* g++.dg/cpp0x/temp_default5.C: New.

From-SVN: r190001